app/assets/stylesheets/components/index_card.scss
.card-group {
  align-items: center;

  & > h3:first-of-type {
    width: 70%;
    text-align: center;
    border-bottom: 1px solid black;
  }
}

.team-members {
  align-items: center;
}

.card-container {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.item-card, .form-card {
  width: 230px;
  height: 160px;
  border: 1px solid darkgrey;
  border-radius: 10px;
  margin: 10px;
  box-shadow: 0px 1px 0px 0px;
}

.item-card:hover {
  cursor: pointer;
}

.item-card a {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border-radius: 10px;
}

.item-card-headers {
  height: 100px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: 15px;
}

.item-card-headers h4, .item-card-headers h5 {
  word-wrap: break-word;
  width: 80%;
}

.item-card > h5 {
  font-family: $raleway;
}

.add-card {
  display: flex;
  align-items: center;
  justify-content: center;
}

.add-card > h4 {
  text-align: center;
}

.form-card {
  height: 100%;
}

.form-card form {
  margin: 10px;
}

.form-card input[type="text"] {
  width: 87%;
  margin: 5px 10px;
  border: 1px solid black;
  border-radius: 3px;
}

.form-card input[type="submit"], .form-card button {
  border-width: 1px;
  font-weight: normal;
  font-size: 15px;
  padding: 0 7px;
  margin: 6px;
  box-shadow: 0px 1px 0px 0px;
}

.form-card h5 {
  margin: 2px;
}

.card-form-errors {
  font-size: 15px;
}

div.user-icon-small {
  height: 30px;
    width: 30px;
    background: darkgrey;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    line-height: 30px;
    border-radius: 15px;
    margin: 5px;
}

.user-icon-small > h5 {
  font-family: $raleway;
  font-weight: bold;
}

.members-icons {
  display: flex;
  margin-bottom: 5px;
  margin-left: 5px;
}

.scrolling-preview {
  position: relative;

  & > h4 {
    width: 225px;
    height: 25px;
    position: absolute;
    top: 5px;
    padding-left: 5px;
    padding-bottom: 3px;
    border-bottom: 1px solid black;
  }

  .scroll-content {
    height: 121px;
    width: 230px;
    overflow-y: scroll;
    margin: 34px 0 5px 0;

    li {
      padding: 5px;
      border-bottom: 1px solid lightgrey;
    }
  }
}

